Fix to CSS to modify scrollbars only in main content, not on overall window -- the latter caused bad things to happen in Snow Leopard
git-svn-id: http://chara.hi.gemini.edu/svn/DRSoftware/gemini_python/trunk@3519 e04282df-fb77-4b70-bf7a-c1223586725c

--- a/astrodata/scripts/adcc_faceplate/css/nighttime_metrics.css
+++ b/astrodata/scripts/adcc_faceplate/css/nighttime_metrics.css
@@ -470,15 +470,15 @@ span.problem {
 }
 
 /*Force visible scrollbar for Lion*/
-::-webkit-scrollbar {
+#main ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 16px;
 }
-::-webkit-scrollbar-track {
+#main ::-webkit-scrollbar-track {
     border-radius: 7px;
     -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,.3);
 }
-::-webkit-scrollbar-thumb {
+#main ::-webkit-scrollbar-thumb {
     border-radius: 7px;
     -webkit-box-shadow: inset 0 0 8px rgba(0,0,0,.5);
 }
